# ocd

./: OCD.hs
gleam-ocd/: README.md  gleam.toml
ocd-elixir/: .gitignore  README.md  mix.exs
ocd-elixir/config/: config.exs
ocd-elixir/lib/: ocd.ex
ocd-elixir/lib/mix/tasks/: ocd.ex
ocd-elixir/lib/ocd/: application.ex  repo.ex
ocd-elixir/lib/ocd/db/: audit_log.ex
ocd-elixir/test/: ocd_test.exs
ocd-fsharp/: OCD.fs  OCD.fsproj  Program.fs  ocd.sln
ocd-gleam/: .tool-versions  dates.csv  gleam.toml  manifest.toml
ocd-gleam/src/: ocd.gleam
ocd-haskell/: ocd.cabal  package.yaml
ocd-haskell/app/: Main.hs
ocd-haskell/src/: Lib.hs  OCD.hs
ocd-haskell/src/OCD/: CSV.hs  Database.hs
ocd-ocaml/: dune-project  ocd.opam  setup.sh
ocd-ocaml/test/: dune
ocd-rust/: Cargo.toml
ocd-rust/src/: main.rs
ocd-typescript/: README.md  bun.lockb  package.json
ocd-typescript/src/: index.ts
